# vrchat-io

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  test.yaml
demos/: .gitignore  interactive_osc_controller_demo.py  opencv_video_capture_demo.py  osc_input_controller_demo.py  pulseaudio_audio_capture_demo.py  soundcard_audio_capture_demo.py  sounddevice_audio_capture_demo.py
demos/practical_tests/: test_reset_values.py
tests/: conftest.py  test_vrchat_io.py
tests/abc/: test_audio_capture.py  test_controller.py  test_video_capture.py
tests/audio/: test_soundcard_audio_capture.py  test_sounddevice_audio_capture.py
tests/controller/osc/: test_addresses.py  test_input_controller.py
tests/controller/wrappers/osc/: test_axes_locomotion.py  test_multi_input_wrapper.py
tests/osc/: test_addresses.py  test_input_controller.py
tests/vision/: test_opencv_video_capture.py
tests/vision/wrappers/: test_ratio_crop_wrapper.py  test_resize_wrapper.py
vrchat_io/abc/: audio_capture.py  controller.py  video_capture.py
vrchat_io/audio/: __init__.py  pulseaudio_application_audio_capture.py  soundcard_audio_capture.py  sounddevice_audio_capture.py
vrchat_io/controller/osc/: __init__.py  input_controller.py
vrchat_io/controller/wrappers/osc/: __init__.py  axes_locomotion_wrapper.py  multi_input_wrapper.py
vrchat_io/osc/: addresses.py  input_controller.py
vrchat_io/vision/: __init__.py  opencv_video_capture.py
vrchat_io/vision/wrappers/: __init__.py  ratio_crop_wrapper.py  resize_wrapper.py
