[tool.poetry]
name = "vrchat-io"
version = "0.1.2"
description = "VRChat IO is a library for inputting data into and getting data from VRChat. (For AI, Machine Learnings.)"
authors = ["GesonAnko <59220704+Geson-anko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vrchat_io"}]

[tool.poetry.dependencies]
python = "^3.10"
python-osc = "^1.8.1"
opencv-python = "^4.8.0.74"
sounddevice = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytest-slow = "^0.0.3"
pytest-cov = {extras = ["toml"], version = "^4.1.0"}
pytest-mock = "^3.11.1"


[tool.poetry.group.demo.dependencies]
keyboard = "^0.13.5"
soundfile = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
